# uwp-dep

./: CMakeLists.txt  README.md
lic/: ANT-TWEAKBAR-LICENSE.txt  DXIL-LICENSE.txt  FMOD-EULA.txt  GLFW-LICENSE.txt  LIBUWP-LICENSE.txt  MESA-LICENSE.rst  SDL-LICENSE.txt  SFML-LICENSE.txt
x64/include/: SDL_video.h  libuwp.h  nod.h
x64/include/SDL3/: SDL_filesystem.h  SDL_hints.h  SDL_main.h  SDL_main_impl.h  SDL_oldnames.h  SDL_platform_defines.h  SDL_system.h  SDL_thread.h  SDL_video.h
x64/include/SDL3/build_config/: SDL_build_config.h  SDL_build_config.h.cmake  SDL_build_config_winrt.h
x64/include/dawn/: dawn_proc_table.h  webgpu.h  webgpu_cpp.h  webgpu_cpp_print.h
x64/include/dawn/wire/client/: webgpu.h  webgpu_cpp.h  webgpu_cpp_print.h
x64/lib/: FLAC.lib  SDL2.lib  SDL3.lib  freetype.lib  glew32.lib  libglfw3dll.lib  libuwp.lib  ogg.lib  sfml-audio.exp  sfml-audio.lib  sfml-graphics.exp  sfml-graphics.lib  sfml-main.lib  sfml-network.exp  sfml-network.lib  sfml-system.exp  sfml-system.lib  sfml-window.exp  sfml-window.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib  webgpu_dawn.lib
